# CodLess

./: .dependency_check_done  .gitignore  AUTONOMOUS_INTEGRATION_GUIDE.md  AUTONOMOUS_NAVIGATION_README.md  DEPLOYMENT_CHECKLIST.md  DEVELOPER.md  FIREBASE_SETUP.md  LICENSE  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  README_PRODUCTION.md  animations.css  animations.js  app.d.ts  app.js  auth-adapter.js  auth-ui.js  autonomous_demo.py  autonomous_hub_code_generator.js  autonomous_runner.py  autonomous_styles.css  autonomous_ui_integration.js  benchmark.py  check_pybricksdev.py  codless.css  firebase-config.js  hat.html  home-page.css  home-page.js  hub_control.py  index.html  instant-auth.js  instructions.txt  local-auth-system.js  localization.py  main.py  manifest.json  odometry.py  offline.html  (+15 more)
.github/workflows/: build-executables.yml  gh-pages.yml  pages.yml
CSS/: animations.css
Experimental/: index.html  styles.css
HTML/: index.html  offline.html
JS/: app.js  sw.js
JavaScript/: README.md  manifest.json  offline.html  sw.js
JavaScript(Beta)/: README.md  app.js  index.html  manifest.json  offline.html  styles.css  sw.js
OTHER/: manifest.json
assets/: README.txt  fll_field.txt
cpp/: CMakeLists.txt  Doxyfile  Doxyfile.in  build-release.sh  codless.desktop.in  hub_control.py  settings.json
cpp(old)/: CMakeLists.txt  Doxyfile  Doxyfile.in  Info.plist.in  README.md  build-release.sh  build.sh  codless.desktop.in  hub_control.py  settings.json
cpp(old)/.github/workflows/: ci-cd.yml  ci.yml
cpp(old)/include/: build_info.h.in
cpp(old)/include/core/: recorded_command.h  robot_config.h
cpp(old)/include/gui/: animation_manager.h  config_dialog.h  main_window.h  settings_manager.h  style_manager.h
cpp(old)/include/hardware/: ble_controller.h
cpp(old)/include/sim/: robot_simulator.h
cpp(old)/include/utils/: calibration_manager.h  error_recovery.h  exceptions.h  json_utils.h  logger.h  performance_monitor.h  trajectory_planner.h
cpp(old)/src/: main.cpp
cpp(old)/src/core/: recorded_command.cpp  robot_config.cpp
cpp(old)/src/gui/: animation_manager.cpp  config_dialog.cpp  main_window.cpp  settings_manager.cpp  style_manager.cpp  ui_components_manager.cpp
cpp(old)/src/hardware/: ble_controller.cpp
cpp(old)/src/sim/: robot_simulator.cpp
cpp(old)/src/utils/: calibration_manager.cpp  error_recovery.cpp  exceptions.cpp  json_utils.cpp  logger.cpp  performance_monitor.cpp  trajectory_planner.cpp
cpp(old)/tests/: CMakeLists.txt  benchmark_tests.cpp  test_ble_controller.cpp  test_integration.cpp  test_json_utils.cpp  test_main_window.cpp  test_recorded_command.cpp  test_robot_config.cpp  test_robot_simulator.cpp
cpp/.github/workflows/: ci-cd.yml  ci.yml
cpp/include/core/: recorded_command.h  robot_config.h
cpp/include/gui/: animation_manager.h  config_dialog.h  main_window.h  style_manager.h
cpp/include/hardware/: ble_controller.h
cpp/include/sim/: robot_simulator.h
cpp/include/utils/: calibration_manager.h  json_utils.h  logger.h
cpp/src/: main.cpp
cpp/src/core/: recorded_command.cpp  robot_config.cpp
cpp/src/gui/: config_dialog.cpp  main_window.cpp  settings_manager.cpp  style_manager.cpp
cpp/src/hardware/: ble_controller.cpp
cpp/src/sim/: robot_simulator.cpp
cpp/src/utils/: calibration_manager.cpp  exceptions.cpp  json_utils.cpp  logger.cpp  performance_monitor.cpp  trajectory_planner.cpp
cpp/tests/: benchmark_tests.cpp  test_integration.cpp  test_json_utils.cpp  test_main_window.cpp  test_robot_config.cpp  test_robot_simulator.cpp
docs/: animations.js  animations.js.map  app.js  app.js.map  index.html  manifest.json  offline.html  sw.js
docs/assets/css/: animations.css  styles.css
public/: animations.js  app.js.map  index.html  manifest.json  offline.html  sw.js  sw.js.map
public/assets/css/: styles.css
saved_runs/: Run_1.json
src/: __init__.py  animations.ts  app.ts  sw.ts
src/core/: __init__.py  codless_app.py  pybricks_adapter.py
src/utils/: __init__.py  check_pybricksdev.py
